--- a/app.json
+++ b/app.json
@@ -1,36 +1,12 @@
 {
-  "name": "Bot Status Bot",
-  "description": "LOl!! See @XDITYA FOR MORE",
-  "logo": "https://telegra.ph/file/8e929112328df851306e4.jpg", 
-  "keywords": [
-    "telegram",
-    "userbot",
-  ],
-  "image": "heroku/python",
-  "formation": {
-    "worker": {
-      "quantity": 1,
-      "size": "free"
+  "name": "Status Up bot",
+  "description": "A Simple bot for updating status of your bots",
+  "repository": "https://github.com/Hirusha-H/TelegraphUploader",
+  "logo": "https://telegra.ph/file/c487058c1c2b6dd439c10.jpg",
+  "keywords": ["telegram"],
+  "buildpacks": [
+    {
+      "url": "heroku/python"
     }
-  },
-  "env": {
-    "API_ID": {
-      "description": "App api_id from https://my.telegram.org"
-    },
-    "API_HASH": {
-      "description": "App api_hash from https://my.telegram.org"
-    },
-    "STRING_SESSION": {
-      "description": "Bot token from https://t.me/BotFather"
-    },
-    "CHANNEL_ID": {
-      "description": "Chat ID of the channel/groups/chat from where to forward messages"
-    },
-    "BOTS_USERNAME": {
-      "description": "Chat ID of thr chat where to forward messages"
-    },
-    "MESSAGE_ID": {
-      "description": "Telegram session name, required if you want to login as user",
-    }
-  }
+  ]
 }
